<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.biosimilarity.life</groupId>
  <artifactId>outer</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>${project.artifactId}</name>
  <description>My wonderfull scala app</description>
  <inceptionYear>2010</inceptionYear>
  <licenses>
    <license>
      <name>My License</name>
      <url>http://....</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <maven.compiler.source>1.5</maven.compiler.source>
    <maven.compiler.target>1.5</maven.compiler.target>
    <encoding>UTF-8</encoding>
    <scala.version>2.9.2</scala.version>
  </properties>

  <distributionManagement>
    <repository>
      <uniqueVersion>true</uniqueVersion>
      <id>biosimilarity</id>
      <name>biosimrepo</name>
      <url>file:///Users/lgm/work/src/projex/biosimilarity/biosimrepomirror</url>
      <layout>default</layout>
    </repository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>scala-tools.org</id>
      <name>Scala-Tools Maven2 Repository</name>
      <url>http://scala-tools.org/repo-releases</url>
    </repository>
    <repository>
      <id>repository.codehaus.org</id>
      <name>Codehaus</name>
      <url>http://repository.codehaus.org/com/thoughtworks</url>
    </repository>
    <repository>
      <id>repository.gwt.rewraps</id>
      <name>gwt-maven-rewraps</name>
      <url>http://gwt-maven-rewraps.googlecode.com/hg/</url>
    </repository>    
    <repository>
      <id>basex</id>
      <name>BaseX Maven Repository</name>
      <url>http://files.basex.org/maven</url>
    </repository>
    <repository>
      <id>ibiblio</id>
      <name>ibiblio maven2 mirror</name>
      <url>http://mirrors.ibiblio.org/pub/mirrors/maven2</url>
    </repository>
    <repository>
      <id>sonatype</id>
      <name>sonatype repository</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <repository>
      <id>biosim</id>
      <url>http://biosimrepomirror.googlecode.com/svn/trunk</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>scala-tools.org</id>
      <name>Scala-Tools Maven2 Repository</name>
      <url>http://scala-tools.org/repo-releases</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>

    <dependency>
      <groupId>com.biosimilarity.life</groupId>
      <artifactId>inner</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>    
    <dependency>
      <groupId>org.scala-tools.testing</groupId>
      <artifactId>specs_2.9.2</artifactId>
      <version>1.6.9</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.scala-tools.testing</groupId>
      <artifactId>scalacheck_2.9.1</artifactId>
      <version>1.9</version>
    </dependency>    
  </dependencies>

  <build>
    <sourceDirectory>src/main/scala</sourceDirectory>
    <testSourceDirectory>src/test/scala</testSourceDirectory>
    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
	<configuration>
	  <source>1.5</source>
	  <target>1.5</target>
	</configuration>
	<version>2.3.2</version>
      </plugin>
      <plugin>
        <groupId>org.scala-tools</groupId>
        <artifactId>maven-scala-plugin</artifactId>
        <version>2.15.2</version>
        <configuration>
	  <scalaVersion>${scala.version}</scalaVersion>
          <charset>${project.build.sourceEncoding}</charset>
	  <displayCmd>true</displayCmd>
          <jvmArgs>	    
	    <!-- jvmArg>-Xnoagent</jvmArg -->
	    <!-- jvmArg>-Djava.compiler=NONE</jvmArg -->
	    <jvmArg>-Xmx4096m</jvmArg>
	    <jvmArg>-XX:MaxPermSize=512m</jvmArg>
	    <jvmArg>-Djava.library.path=$HGDB_ROOT/native</jvmArg>
            <jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties</jvmArg>
          </jvmArgs>
	  <args>	    
	    <!-- arg>-deprecation</arg -->
	    <!-- arg>-unchecked</arg -->
	    <!-- <arg>-Xprint:selectivecps</arg> -->
	    <arg>-explaintypes</arg>
	    <arg>-Xplugin:/Users/lgm/.m2/repository/org/scala-tools/sxr/sxr_2.9.0/0.2.7/sxr_2.9.0-0.2.7.jar</arg>
	    <arg>-P:sxr:base-directory:${basedir}/src</arg>
	    <arg>-P:continuations:enable</arg>
          </args>
	  <compilerPlugins>
      	    <compilerPlugin>	      
      	      <groupId>org.scala-lang.plugins</groupId>
      	      <artifactId>continuations</artifactId>
      	      <version>${scala.version}</version>
      	    </compilerPlugin>
	    <compilerPlugin>	      
      	      <groupId>org.scala-tools.sxr</groupId>
      	      <artifactId>sxr_2.9.0</artifactId>
      	      <version>0.2.7</version>
      	    </compilerPlugin>
      	  </compilerPlugins>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>      
    </plugins>    
  </build>
  <reporting>
    <plugins>
      <plugin>
	<groupId>org.scala-tools</groupId>
	<artifactId>maven-scala-plugin</artifactId>
	<version>2.15.1</version>
	<configuration>
	  <charset>${project.build.sourceEncoding}</charset>
	  <jvmArgs>
	    <jvmArg>-Xmx1024m</jvmArg>
	    <jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties</jvmArg>
	  </jvmArgs>
	</configuration>
      </plugin>
    </plugins>
  </reporting>
</project>
